# kaufy

bean/: Cargo.toml  Dockerfile
bean/entity/: Cargo.toml
bean/entity/src/: acl.rs  addon.rs  base.rs  drink.rs  drink_addon.rs  impl_std_ops.rs  lib.rs  order.rs  order_status.rs  temperature.rs  user.rs
bean/migration/: Cargo.toml
bean/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231022_170456_create_table.rs  m20231023_012236_create_table.rs  m20231028_221158_create_table.rs  m20231030_031606_temps_table.rs  m20231030_033336_use_numbers_in_drink_addons.rs  m20231111_004759_orders.rs  m20231123_200526_roles.rs  main.rs
bean/src/: db.rs  jwt.rs  main.rs  middleware.rs  pusher.rs
bean/src/graphql/: guard.rs  mod.rs  schema.rs
bean/src/graphql/mutation/: drink.rs  mod.rs  order.rs
bean/src/graphql/query/: addon.rs  base.rs  drink.rs  me.rs  mod.rs  order.rs  temperature.rs
brew/: .eslintrc.cjs  .gitignore  codegen.ts  fetch-gql.cjs  index.html  package.json  pnpm-lock.yaml
brew/src/: App.tsx  DrinkBuilder.tsx  Drinks.tsx  GoogleOAuth.tsx  Header.tsx  Home.tsx  Login.tsx  Logout.tsx  Navbar.module.css  Navbar.tsx  Orders.tsx  Settings.tsx  layout.tsx  main.css  main.tsx  notifier.tsx  vite-env.d.ts
brew/src/utils/: auth.ts  color.ts  gql.ts  hooks.ts
