[package]
name = "bean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "./entity" }
tokio = { version = "1.33.0", features = ["macros", "rt", "rt-multi-thread"] }
async-graphql = "6.0.9"
async-graphql-poem = "6.0.9"
dotenv = "0.15.0"
poem = { version = "1.3.58", features = ["cookie"] }
poem-grants = "1.0.0-beta.3"
chrono = "0.4.31"
jsonwebtoken = "9.1.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
async-trait = "0.1.74"
reqwest = { version = "0.11.22", features = ["blocking"] }
tap = "1.0.1"
